# moshi_kame_finetune

./: pyproject.toml
examples/: finetune_j_moshi.sh
kame_jp/: server_oracle_jp.py
scripts/japanese_kame/: 00_init_j_moshi.sh  01_build_qa_dataset.py  02_generate_dialogues.py  03_synthesize_speech.py  04_word_alignment.py  05_generate_oracle.sh  06_tokenize_and_prepare.sh  README.md  evaluate.py
tools/: generate_oracle_from_text.py  init_moshi_for_ft.py
